@@ -67,6 +67,9 @@ int main()
     }
   };
 
+  dolfin_set("linear algebra backend", "uBLAS");
+  //dolfin_set("linear algebra backend", "PETSc");
+
   // Create mesh
   UnitSquare mesh(32, 32);
 
@@ -86,6 +89,7 @@ int main()
 
   // Solve PDE
   Function u;
+  pde.set("PDE linear solver", "iterative");
   pde.solve(u);
 
   // Plot solution
